--- a/docker/loopback/Dockerfile
+++ b/docker/loopback/Dockerfile
@@ -12,7 +12,7 @@ RUN mkdir /app
 
 # Update Linux Packages
 RUN apt-get update && apt-get upgrade -y
-RUN apt-get install -y mysql-client-8.0.35
+RUN apt-get install mysql-client -y
 
 # Run update and Strongloop install
 RUN npm install -g npm
